# lisp-in-small-pieces

./: .gitignore  README.md
07-compilation/vm/: Cargo.toml
07-compilation/vm/src/: compiler.rs  environments.rs  error.rs  main.rs  memory.rs  op_impl.rs  op_tests.rs  opcode.rs  scheme_object_file.rs  value.rs  vm.rs
project/: .gitignore  Cargo.toml
project/benchmark/: Cargo.toml
project/benchmark/src/: bench.rs  main.rs  scm_boxed.rs  scm_enum.rs
project/common/: Cargo.toml
project/common/src/: arity.rs  lib.rs  named.rs  source.rs  sourced.rs  sum_type.rs
project/libs/: kanren.sld
project/libs/scheme/: base.sld  file.sld  inexact.sld  write.sld
project/libs/sunny/: binding.sld  case-lambda.sld  conditionals.sld  dynwind.sld  lists.sld  parameter.sld  ports.sld  quasiquote.sld  record.sld
project/libs/testing/: lib.sld
project/parser/: Cargo.toml
project/parser/src/: basic_parsers.rs  combinators.rs  error.rs  lib.rs  sexpr.rs  sexpr_parsing.rs  source.rs  sourced.rs  span.rs
project/repl/: Cargo.toml
project/repl/src/: bytecode.rs  continuation.rs  env.rs  error.rs  interpreter.rs  language.rs  library.rs  macro_language.rs  (+12 more)
project/scheme/: base.sld
project/src/: ast.rs  bytecode.rs  continuation.rs  description.rs  env.rs  error.rs  eval.rs  language.rs  library.rs  macro_language.rs  main.rs  objectify.rs  parsing.rs  ports.rs  primitive.rs  repl.rs  scan_out_defines.rs  scm.rs  scm_write.rs  sexpr.rs  source.rs  symbol.rs  syntactic_closure.rs  utils.rs  value.rs
project/sunny/: binding.sld  case-lambda.sld  conditionals.sld  dynwind.sld  exception.sld  lists.sld  parameter.sld  ports.sld  record.sld
project/testing/: lib.sld  macro.sld  reexport.sld
project/tmp_compile_time/: Cargo.toml
project/tmp_run_time/: Cargo.toml
(+192 files in other folders)
