[package]
name = "sunny"
version = "0.1.0"
authors = ["Martin Billinger <mbillingr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.1"
lazy_static = "1.4"
lexpr = "0.2"
rustyline = "5"

[dependencies.bdwgc-alloc]
version = "0.5.0"
default-features = false
features = ["cmake"]
