[package]
name = "vm"
version = "0.1.0"
authors = ["Martin Billinger <mbillingr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lisp-core = { path = "../../crates/lisp-core" }
bdwgc-alloc = "0.5"
