[package]
name = "vm"
version = "0.1.0"
authors = ["Martin Billinger <mbillingr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lisp-core = { path = "../../crates/lisp-core" }

[dependencies.bdwgc-alloc]
version = "0.5"
default-features = false
features = ["cmake"]
